Added new code example for USB (#116)